<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->


    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:id="@+id/fullscreen_content">

        <TextView
            android:text="@string/welcome"
            android:id="@+id/welcome"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:text="@string/app_name"
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="32276dp"
            android:layout_height="320dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/ic_launcher_desc"
            android:layout_weight="0.47"
            style="@android:style/Theme.DeviceDefault.Light.NoActionBar" />

        <TextView
            android:text="@string/created_by"
            android:id="@+id/created_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="10sp" />

        <TextView
            android:text="@string/name"
            android:id="@+id/author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/next_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hungry_text" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
