<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.dabby3pleminds.choppot.HistoryDetail"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="532dp"
            android:layout_height="222dp"
            android:id="@+id/history_image_detail"
            android:layout_gravity="center"
            android:contentDescription="@string/image"
            android:src="@mipmap/ic_image2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:background="#ffd7edff"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:divider="#ffe4fff2"
            android:dividerPadding="2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:editable="false"
                android:text="@string/description"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#ff180b5c"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/order_location_title"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:id="@+id/history_order_desc"
                android:editable="false"
                android:layout_weight="0.5"
                android:textAlignment="center"
                android:textColor="#ff180b5c"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:background="#ffd7edff"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:divider="#ffe4fff2"
            android:dividerPadding="2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/provider_title"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:editable="false"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#ff180b5c"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/order_location_title"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:id="@+id/history_order_provider"
                android:editable="false"
                android:layout_weight="0.5"
                android:textAlignment="center"
                android:textColor="#ff180b5c"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:background="#ffd7edff"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:divider="#ffe4fff2"
            android:dividerPadding="2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/order_date_title"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:editable="false"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#ff180b5c"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/order_location_title"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:id="@+id/history_order_date"
                android:editable="false"
                android:layout_weight="0.5"
                android:textAlignment="center"
                android:textColor="#ff180b5c"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:background="#ffd7edff"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:divider="#ffe4fff2"
            android:dividerPadding="2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/order_time_title"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:editable="false"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#ff180b5c"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/order_location_title"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:id="@+id/history_order_time"
                android:editable="false"
                android:layout_weight="0.5"
                android:textAlignment="center"
                android:textColor="#ff180b5c"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:background="#ffd7edff"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:divider="#ffe4fff2"
            android:dividerPadding="2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingLeft="10dp"
                android:text="@string/total_price"
                android:id="@+id/order_loc"
                android:editable="false"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#ff180b5c"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/order_location_title"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:id="@+id/history_order_cost"
                android:editable="false"
                android:layout_weight="0.5"
                android:textAlignment="center"
                android:textColor="#ff180b5c"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="bottom">


            <!--<Button-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/deletBt"-->
                <!--android:id="@+id/hdetail_delButton"-->
                <!--android:layout_weight="1" />-->

            <!--<Button-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/add_favourite"-->
                <!--android:id="@+id/hdetail_addFav"-->
                <!--android:layout_weight="1" />-->

            <!--<Button-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/reorder"-->
                <!--android:id="@+id/hdetail_reorder"-->
                <!--android:layout_weight="1" />-->
        </LinearLayout>

    </LinearLayout>


</ScrollView>
