<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:focusable="true"
    android:fillViewport="true"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="true"
        android:background="#ffe4fff2"
        android:overScrollMode="always"
        android:outlineProvider="paddedBounds"
        android:id="@+id/oder_page_layout"
        android:divider="#ffd7edff"
        android:dividerPadding="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:padding="10dp"
            android:background="#ffd7edff"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:divider="#ffe4fff2"
            android:dividerPadding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/provider_title"
                android:paddingTop="15dp"
                android:paddingLeft="10dp"
                android:id="@+id/provider_title"
                android:editable="false"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#ff180b5c"
                android:textSize="20sp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_provider"
                android:paddingBottom="5dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.5"
                android:textColor="#000000"
                android:transitionGroup="false"
                android:theme="@style/AlertDialog.AppCompat.Light" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:padding="10dp"
            android:background="#ffd7edff"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:divider="#ffe4fff2"
            android:dividerPadding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/order_title"
                android:paddingTop="15dp"
                android:paddingLeft="10dp"
                android:id="@+id/order_title"
                android:editable="false"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#ff180b5c"
                android:textSize="20sp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_order"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.5"
                android:paddingBottom="5dp"
                android:textColor="#ff180b5c" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:padding="10dp"
            android:background="#ffd7edff"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:divider="#ffe4fff2"
            android:dividerPadding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/order_drink_title"
                android:paddingTop="15dp"
                android:paddingLeft="10dp"
                android:id="@+id/order_drinks"
                android:editable="false"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#ff180b5c"
                android:textSize="20sp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_order_drinks"
                android:layout_weight="0.5"
                android:paddingBottom="5dp"
                android:textColor="#ff180b5c" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:padding="10dp"
            android:background="#ffd7edff"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:divider="#ffe4fff2"
            android:dividerPadding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/order_water_title"
                android:paddingTop="15dp"
                android:paddingLeft="10dp"
                android:id="@+id/order_water"
                android:editable="false"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#ff180b5c"
                android:textSize="20sp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_order_water"
                android:layout_weight="0.5"
                android:paddingBottom="5dp"
                android:textColor="#ff180b5c" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:id="@+id/location_linear"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:padding="10dp"
            android:background="#ffd7edff"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:divider="#ffe4fff2"
            android:dividerPadding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/order_location_title"
                android:paddingTop="15dp"
                android:paddingLeft="10dp"
                android:id="@+id/order_location_title"
                android:editable="false"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#ff180b5c"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textLongMessage"
                android:id="@+id/order_location_value"
                android:layout_weight="0.5"
                android:textColor="#ff180b5c"
                android:background="#80a79aad"
                android:layout_marginRight="5dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:padding="10dp"
            android:background="#ffd7edff"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:divider="#ffe4fff2"
            android:dividerPadding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/order_quantity_title"
                android:paddingTop="15dp"
                android:paddingLeft="10dp"
                android:id="@+id/order_quantity_title"
                android:editable="false"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#ff180b5c"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/order_quantity_value"
                android:layout_weight="0.5"
                android:textAlignment="center"
                android:textColor="#ff180b5c"
                android:textSize="20sp"
                android:background="#80a79aad"
                android:layout_marginRight="5dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:padding="10dp"
            android:background="#ffd7edff"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:divider="#ffe4fff2"
            android:dividerPadding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/order_comment"
                android:paddingTop="15dp"
                android:paddingLeft="10dp"
                android:id="@+id/order_comment"
                android:editable="false"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#ff180b5c"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/order_comment_value"
                android:layout_weight="0.5"
                android:background="#80a79aad"
                android:inputType="textLongMessage"
                android:layout_marginRight="5dp" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dp"

            >

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_submit"
                android:id="@+id/orderButton"
                android:layout_gravity="center"
                android:layout_weight="1" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>